patchbay-gui/tests/ui/root_frame_spec_new_is_private.rs
use patchbay_gui::{textbox, RootFrameSpec};

fn main() {
    let _ = RootFrameSpec::new("root", textbox("x"));
}
